--- a/src/app/shared/loader/loader.component.css
+++ b/src/app/shared/loader/loader.component.css
@@ -4,26 +4,41 @@
 
 .container-loader {
   position: fixed;
-  z-index: 1;
+  z-index: 99999;
   top: 0;
   left: 0;
   width: 100%;
   height: 100%;
   background-color: rgba(0, 0, 0, 0.4);
+  backdrop-filter: blur(2px);
 }
 
 .loader {
-  z-index: 2;
+  z-index: 100000;
   position: fixed;
   top: 0;
   left: 0;
   right: 0;
   bottom: 0;
   margin: auto;
-  width: 150px;
-  height: 150px;
+  width: 100px;
+  height: 100px;
   background-image: url('/assets/svg/loader.svg');
   background-size: contain;
   background-repeat: no-repeat;
   background-position: center;
+}
+
+@media (min-width: 640px) {
+  .loader {
+    width: 120px;
+    height: 120px;
+  }
+}
+
+@media (min-width: 768px) {
+  .loader {
+    width: 150px;
+    height: 150px;
+  }
 }
