--- a/src/app/pages/public/encuesta/encuesta.component.html
+++ b/src/app/pages/public/encuesta/encuesta.component.html
@@ -334,7 +334,11 @@
                                 <option value="18-25">18-25 años</option>
                                 <option value="26-35">26-35 años</option>
                                 <option value="36-45">36-45 años</option>
-                                <option value="45+">45+ años</option>
+                                <option value="46-55">46-55 años</option>
+                                <option value="56-65">56-65 años</option>
+                                <option value="66-75">66-75 años</option>
+                                <option value="76-85">76-85 años</option>
+                                <option value="86+">86+ años</option>
                             </select>
                         </div>
 
